--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-flip-move": "^3.0.4",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-twitter-embed": "^3.0.3",
     "web-vitals": "^1.1.1"
   },
   "scripts": {
